--- a/proyecto/css/Padel.css
+++ b/proyecto/css/Padel.css
@@ -50,15 +50,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-    perspective: 1000px;
-
-    :hover {
-        transform: rotateY(180deg);
-    }
-
-
 
 }
 
@@ -71,7 +62,7 @@ body {
 }
 
 .txt2boxCard {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 400;
     text-align: center;
     padding: 5px;
@@ -86,11 +77,18 @@ body {
     width: 300px;
     height: 400px;
     text-align: center;
-    transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+    /*hago una transformacion  */
     transform-style: preserve-3d;
-
+    backface-visibility: visible;
+    perspective: 10rem;
+    transition: transform 1s ease-in-out;
 
 }
+
+.boxCard:hover {
+    transform: rotateY(180deg);
+}
+
 
 .boxClases p {
     transform: rotateY(0deg) !important;
@@ -101,7 +99,6 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
@@ -111,6 +108,7 @@ body {
     background-color: #4b33a3;
     color: #faebd7;
     /*rotate en y */
+    backface-visibility: hidden;
     transform: rotateY(180deg);
     text-align: center;
     cursor: pointer;
@@ -183,9 +181,11 @@ body {
 }
 
 p {
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 400;
 }
+
+
 
 .list {
     font-size: 18px;
