--- a/proyecto/css/formulario.css
+++ b/proyecto/css/formulario.css
@@ -1,67 +1,14 @@
-/* .box {
-    background-color:   #101a23;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 800px;
-    color: #FFF;
-}
-
-.inputs {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color:  #24303c;
-    opacity: 0.7;
-    width: 50%;
-    height: auto; */
-/*display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color:  #24303c;
-    opacity: 0.7;
-    width: 50%;
-    height: auto;
-}
-
-.inputForm {
-    padding: 12px;
-    width: 60%;
-    border-radius: 10px;
-    margin-top: 15px;
-    border: 0px;
-}
-
-.select {
-    padding: 12px;
-    width: 60%;
-    border-radius: 50px;
-    margin-top: 15px;
-    border: 0px;
-}
-.textTitle{
-    font-size: 24px;
-    font-weight: 400;
-    color: white;
-}
-.descargarForm{
-    margin-bottom: 50px;
-} */
-
-/* chat gpt */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
     height: 1000px;
     margin: 0;
     width: 100%;
+    background-image: url(../img.p/neon.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .box {
@@ -75,11 +22,13 @@ body {
 
 }
 
-.center{
+.center {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 800px;
+
 }
 
 .inputs {
@@ -96,7 +45,7 @@ body {
 
 .inputForm,
 .select {
-    padding: 10px;
+    padding: 8px;
     margin-bottom: 8px;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -180,9 +129,9 @@ a:hover {
     margin-top: 16px;
 }
 
-.divFecha{
+.divFecha {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+
 }
