--- a/proyecto/css/futbol.css
+++ b/proyecto/css/futbol.css
@@ -1,8 +1,6 @@
 .boxFutbol {
     width: 100%;
     height: 100%;
-
-    /* background-attachment: scroll; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,10 +10,7 @@
 
 }
 
-/*es para que el texto no se rote*/
-.boxClases p {
-    transform: rotateY(0deg) !important;
-}
+
 
 body {
     background-color: #000;
@@ -56,13 +51,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-    perspective: 1000px;
-
-    :hover {
-        transform: rotateY(180deg);
-    }
 
 
 
@@ -70,6 +58,11 @@ body {
 
 /*  div con movimientos con horarios */
 
+
+/*es para que el texto no se rote*/
+.boxClases p {
+    transform: rotateY(0deg) !important;
+}
 
 .txtBoxCard {
     font-size: 25px;
@@ -91,18 +84,23 @@ body {
     width: 300px;
     height: 400px;
     text-align: center;
-    transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
     transform-style: preserve-3d;
+    backface-visibility: visible;
+    perspective: 10rem;
+    transition: transform 1s ease-in-out;
 
 
 }
+.boxCard:hover {
+    transform: rotateY(180deg);
+}
+
 
 .frente,
 .dorso {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
@@ -113,6 +111,7 @@ body {
     color: #faebd7;
     /*rotate en y */
     transform: rotateY(180deg);
+    backface-visibility: hidden;
     text-align: center;
     cursor: pointer;
 }
