--- a/proyecto/css/natacion.css
+++ b/proyecto/css/natacion.css
@@ -29,7 +29,6 @@ body {
     justify-content: space-around;
     align-items: top;
     width: 100%;
-
     margin-top: 0%;
 
 }
@@ -57,13 +56,9 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-    perspective: 1000px;
 
-    :hover {
-        transform: rotateY(180deg);
-    }
+
+
 
 
 
@@ -92,10 +87,15 @@ body {
     width: 300px;
     height: 400px;
     text-align: center;
-    transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+    transform-style: flat;
     transform-style: preserve-3d;
+    backface-visibility: visible;
+    perspective: 10rem;
+    transition: transform 1s ease-in-out;
+}
 
-
+.boxCard:hover {
+    transform: rotateY(180deg);
 }
 
 .frente,
@@ -103,7 +103,6 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
@@ -114,6 +113,7 @@ body {
     color: #faebd7;
     /*rotate en y */
     transform: rotateY(180deg);
+    backface-visibility: hidden;
     text-align: center;
     cursor: pointer;
 }
